--- a/index.html
+++ b/index.html
@@ -19,26 +19,19 @@
 
     <div class="gross">Ohne Routine</div>
     <!--    <div class="transparent_block"></div>-->
-    <div class="container_container">
-        <div class="container_texts" id="container_left">
-        </div>
-        <div class="container_texts" id="container_middle">
-        </div>
-        <div class="container_texts" id="container_right"></div>
-    </div>
 
     <div class="texts_all">
         <div class="wrap" id="wrap_jasper">
             <div class="text title" id="title_jasper"> Das Übliche </div>
             <div class="text" id="text_jasper">
-                Fenster verhangen, mein Zimmer im Halbdunkel. Decke überm Kopf, die Außenwelt grell und lärmend. Ich dämpfe sie mäßig erfolgreich. Kleiner Kampf, dann duschen, halbe Stunde im Sitzen. <br>
+                Fenster verhangen, mein Zimmer im Halbdunkel. Decke überm Kopf, die Außenwelt grell und lärmend. Ich dämpfe sie mäßig erfolgreich. Kleiner Kampf, dann duschen, halbe Stunde im Sitzen. <br><br>
 
-                Tischbank am Straßeneck, pünktlich zum Sonnenuntergang die erste Runde. Floskelfragen und alte Geschichten werden getauscht. Anwesenheit als sozialer Automat, der passend auf Eingaben reagiert. Wann war ich gestern im Bett? <br>
+                Tischbank am Straßeneck, pünktlich zum Sonnenuntergang die erste Runde. Floskelfragen und alte Geschichten werden getauscht. Anwesenheit als sozialer Automat, der passend auf Eingaben reagiert. Wann war ich gestern im Bett?<br><br>
 
                 Fassaden und Pflastersteine leuchten sanft in der Dämmerung. Die Dunklen Gedanken weichen vertrauten Stimmen und freundlichen Gesichtern. Wie oft wie hier schon saßen! Tief in mir breitet sich die Wärme aus.
-                <br>
+                <br><br>
                 Kurzes Schweigen - nächste Runde? Wieso den Abend verschwenden an Sorgen der nächsten Woche? Schleichend das Leben verlernen, wie meine Eltern. Ich sollte mich mal wieder melden. Morgen.
-                <br>
+                <br><br>
                 Mein Handy vibriert, Heimfahrt 12 Euro. Leere Flasche neben den Hauseingang, Aufstieg durchs einsame Treppenhaus. Druck im Kopf, die Augen verschlossen. Hin und her wälzen, entfliehen, halbe Stunde im Halbdunkel.
             </div>
         </div>
@@ -169,8 +162,10 @@
 
     </div>
 
-    <script src="js/jquery.js"> </script>
-    <!--    <script src="js/slide.js"> </script>-->
 
+
+</body>
+</html>
+    <script src="js/jquery.js"> </script>
     <script src="js/click.js"> </script>
-</body></html>
+    <script src='move.js'></script>
