--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
 
                 Hin und Her. Ich wandere von Fensterblick zu Fensterblick. Aus meinem Zimmer ein Baum aus der Küche Bäume.
                 Hin und Her. Baum, Bäume, Baum, Bäume. Baum.
-                Ich erinnere mich an die Grundschule. Zur Erinnerung gehört ein Zoobesuch. An der Scheibe klebend, lerne ich die Eisbären kennen. Ein immer gleiches Hin und Her auf ohnehin beengtem Raum wird abgeschlossen mit einem lustigen Kopfschüttler. Unsere Lehrerin erklärt uns: Das, was wir da sehen, sind die Anzeichen eines Problems. Was er da macht, war nicht lustig, nein. Es ist ein Zwang. Er wandert, weil er nicht anders kann.<br>
-                Der Begriff zur Erinnerung ‚Hospitalismus‘ findet nun nach Jahren den Weg zurück in meinen Kopf. Um mehr herauszufinden, unterbreche ich meine Zimmerwanderung und stelle bei näherem Googeln fest, dass das problematische Verhalten des Bären anders heißt: ‚Stereotypie‘. Richtig erinnert, falsch gelernt.<br>
+                Ich erinnere mich an die Grundschule. Zur Erinnerung gehört ein Zoobesuch. An der Scheibe klebend, lerne ich die Eisbären kennen. Ein immer gleiches Hin und Her auf ohnehin beengtem Raum wird abgeschlossen mit einem lustigen Kopfschüttler. Unsere Lehrerin erklärt uns: Das, was wir da sehen, sind die Anzeichen eines Problems. Was er da macht, war nicht lustig, nein. Es ist ein Zwang. Er wandert, weil er nicht anders kann.
+                <br><br>
+                Der Begriff zur Erinnerung ‚Hospitalismus‘ findet nun nach Jahren den Weg zurück in meinen Kopf. Um mehr herauszufinden, unterbreche ich meine Zimmerwanderung und stelle bei näherem Googeln fest, dass das problematische Verhalten des Bären anders heißt: ‚Stereotypie‘. Richtig erinnert, falsch gelernt.<br><br>
                 Ich lande in einer YouTube-Spirale. Unzählige Zoo-Bären laufen im Zeitraffer. Hin, Her, Kopfschütteln. Repeat.
                 Von PeTA lerne ich, je größer das natürliche Streifgebiet, desto schlimmer die Stereotypie. Der Berechnung des Anteils meiner 15 Quadratmeter an meinem damaligen Streifgebiet verweigere ich mich.
-                PeTA sorgt sich auch um meine Nahrungssuche und mein Paarungsverhalten. Danke, aber Bauchschmerzen bereitet mir heute nur PeTAs Vermutung, dass besonders junge Bären ihren Zwang auch nach verbesserten Haltungsbedingungen nicht wieder ablegen.<br>
+                PeTA sorgt sich auch um meine Nahrungssuche und mein Paarungsverhalten. Danke, aber Bauchschmerzen bereitet mir heute nur PeTAs Vermutung, dass besonders junge Bären ihren Zwang auch nach verbesserten Haltungsbedingungen nicht wieder ablegen.<br><br>
                 Mit etwas Glück gehöre ich mit 25 nicht mehr zu den Jungtieren.
             </div>
 
@@ -75,8 +76,6 @@
         <div class="wrap" id="wrap_clara">
             <div class="text title" id="title_clara"> Poröse Grenzen </div>
             <div class="text" id="text_clara">
-                Poröse grenzen
-
                 Ich setze an, die Eiswürfel springen. <br>
                 Wenig Sonne, Luxussteuer und nur 12 Prozent <br>
                 trotzdem schaffen sie es nicht, bleiben drinnen <br>
